Fix T71741: Crash showing the object relations menu